<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tipket.app.SearchActivity">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchText"
        android:hint="@string/search_hint"
        android:inputType="textCapWords"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:imeOptions="actionSearch"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchUsersText"
        android:hint="@string/search_users_hint"
        android:inputType="textCapWords"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:imeOptions="actionSearch"
        android:visibility="invisible"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_date"
        android:id="@+id/sortByDate"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchText"
        android:layout_alignRight="@+id/searchButton"
        android:layout_alignEnd="@+id/searchButton"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:fontFamily="sans-serif"
        android:textColor="#61616e"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_most_wanted"
        android:id="@+id/sortByTrendy"
        android:layout_below="@+id/sortByDate"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/searchButton"
        android:layout_alignEnd="@+id/searchButton"
        android:fontFamily="sans-serif"
        android:textColor="#FCB646"/>

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_filter"
        android:id="@+id/filterButton"
        android:layout_below="@+id/sortByTrendy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_remove"
        android:id="@+id/hideFilterButton"
        android:layout_below="@+id/sortByTrendy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_radio_tittle"
        android:id="@+id/searchLabel"
        android:layout_below="@+id/filterButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:visibility="invisible"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/searchLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="9"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kilometresTextView"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>


</RelativeLayout>