<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tipket.app.TipNotInPlaceActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/merchantName2"
                android:hint="@string/merchantName_hint"
                android:layout_below="@+id/previewImage2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:imeOptions="actionNext"
                android:visibility="invisible"
                android:paddingTop="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_place"
                android:id="@+id/listOfMerchantsNames"
                android:layout_below="@+id/previewImage2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameOfMerchantSelected"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/previewImage2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_close"
                android:id="@+id/eraseMerchantSelected"
                android:layout_alignTop="@+id/listOfMerchantsNames"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:visibility="invisible"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/productNameField2"
                android:hint="@string/productName_hint"
                android:layout_below="@+id/merchantName2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/commentField2"
                android:hint="@string/comment_hint"
                android:inputType="textCapSentences"
                android:layout_below="@+id/productNameField2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cityAddress"
                android:hint="@string/city_address"
                android:textColorHint="#FCB646"
                android:inputType="textCapSentences"
                android:layout_below="@+id/commentField2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:imeOptions="actionNext"
                android:visibility="invisible"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/streetAddress"
                android:hint="@string/street_address"
                android:textColorHint="#FCB646"
                android:inputType="textCapSentences"
                android:layout_below="@+id/cityAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:imeOptions="actionNext"
                android:visibility="invisible"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/postCode"
                android:hint="@string/post_code"
                android:inputType="textCapSentences"
                android:layout_below="@+id/streetAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:imeOptions="actionDone"
                android:visibility="invisible"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sedTip2"
                android:singleLine="true"
                android:layout_below="@+id/postCode"
                android:layout_centerHorizontal="true"
                android:background="@drawable/add_wish"
                android:layout_marginTop="20dp"/>

            <!-- - >
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_below="@+id/sedTip"
                android:hint="Shop Name"/>
             <- -->

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/cameraButton2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_action_camera"
                android:layout_marginLeft="30dp"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/previewImage2"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/eraseImage2"
                android:background="@drawable/search_close"
                android:visibility="invisible"
                android:layout_alignRight="@+id/previewImage"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>
